--- a/apps/infinite-scroller-poc/src/app/app.component.scss
+++ b/apps/infinite-scroller-poc/src/app/app.component.scss
@@ -1,4 +1,4 @@
-@import "~perfect-scrollbar/css/perfect-scrollbar.css";
+@import '~perfect-scrollbar/css/perfect-scrollbar.css';
 
 :host {
   position: fixed;
@@ -6,15 +6,16 @@
   right: 0;
   top: 0;
   bottom: 0;
+  display: flex;
+  flex-direction: column;
 }
 
 #infinite-scroller {
   padding: 0;
   list-style: none;
-  height: 100%;
-  width: 100%;
   margin: 0;
   overflow-y: auto;
+  flex-grow: 1;
 
   .item {
     padding: 10px 5px;
